flex/engines/graph_db/grin/include/include/property/row.h

int grin_get_int32_from_row(GRIN_GRAPH, GRIN_ROW, size_t);
/**
 * @brief Create a row.
 * Row works as carrier of property values in GRIN.
 * It is a pure value array, and users can only get the value by the array index.
 * That means users should understand the property that each value is 
 * representing when using the row.
 * Currently rows are used in two scenarios:
 * 1. Users can create a row of values for primary keys properties,
 * and then query the vertex/edge using the row if pk indexing is enabled.
 * 2. Users can get the row of values for the entire property list of 
 * a vertex/edge in one API ``grin_get_vertex_row`` or ``grin_get_edge_row``.
 * However this API is not recommended if the user only wants to get the
 * properties values, in which case, the user can get property values
 * one-by-one using the APIs like ``grin_get_vertex_property_value_of_int32``.
*/
GRIN_ROW grin_create_row(GRIN_GRAPH);
bool grin_insert_int32_to_row(GRIN_GRAPH, GRIN_ROW, int);
bool grin_insert_uint32_to_row(GRIN_GRAPH, GRIN_ROW, unsigned int);
bool grin_insert_int64_to_row(GRIN_GRAPH, GRIN_ROW, long long int);
bool grin_insert_uint64_to_row(GRIN_GRAPH, GRIN_ROW, unsigned long long int);
bool grin_insert_float_to_row(GRIN_GRAPH, GRIN_ROW, float);
bool grin_insert_double_to_row(GRIN_GRAPH, GRIN_ROW, double);
bool grin_insert_string_to_row(GRIN_GRAPH, GRIN_ROW, const char*);
bool grin_insert_date32_to_row(GRIN_GRAPH, GRIN_ROW, int);
bool grin_insert_time32_to_row(GRIN_GRAPH, GRIN_ROW, int);
bool grin_insert_timestamp64_to_row(GRIN_GRAPH, GRIN_ROW, long long int);
const void* grin_get_value_from_row(GRIN_GRAPH, GRIN_ROW, GRIN_DATATYPE, size_t);
/**
 * @brief Get row of values for the entire property list of a vertex.
 * Later users can get property values from the row using APIs like
 * ``grin_get_int32_from_row``.
 * However this two-step value getting is not recommended if the user 
 * only wants to get the value of one property, in which case, the user
 * should use APIs like ``grin_get_vertex_property_value_of_int32``.
 * @param GRIN_GRAPH The graph
 * @param GRIN_VERTEX The vertex
 */
GRIN_ROW grin_get_vertex_row(GRIN_GRAPH, GRIN_VERTEX);
GRIN_ROW grin_get_edge_row(GRIN_GRAPH, GRIN_EDGE);