flex/engines/graph_db/grin/include/rust/grin.rs


    #[doc = " @brief Create a row.\n Row works as carrier of property values in GRIN.\n It is a pure value array, and users can only get the value by the array index.\n That means users should understand the property that each value is\n representing when using the row.\n Currently rows are used in two scenarios:\n 1. Users can create a row of values for primary keys properties,\n and then query the vertex/edge using the row if pk indexing is enabled.\n 2. Users can get the row of values for the entire property list of\n a vertex/edge in one API ``grin_get_vertex_row`` or ``grin_get_edge_row``.\n However this API is not recommended if the user only wants to get the\n properties values, in which case, the user can get property values\n one-by-one using the APIs like ``grin_get_vertex_property_value_of_int32``."]
    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_create_row(arg1: GrinGraph) -> GrinRow;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_insert_int32_to_row(
        arg1: GrinGraph,
        arg2: GrinRow,
        arg3: i32,
    ) -> bool;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_insert_uint32_to_row(
        arg1: GrinGraph,
        arg2: GrinRow,
        arg3: u32,
    ) -> bool;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_insert_int64_to_row(
        arg1: GrinGraph,
        arg2: GrinRow,
        arg3: i64,
    ) -> bool;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_insert_uint64_to_row(
        arg1: GrinGraph,
        arg2: GrinRow,
        arg3: u64,
    ) -> bool;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_insert_float_to_row(arg1: GrinGraph, arg2: GrinRow, arg3: f32) -> bool;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_insert_double_to_row(arg1: GrinGraph, arg2: GrinRow, arg3: f64) -> bool;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_insert_string_to_row(
        arg1: GrinGraph,
        arg2: GrinRow,
        arg3: *const ::std::os::raw::c_char,
    ) -> bool;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_insert_date32_to_row(
        arg1: GrinGraph,
        arg2: GrinRow,
        arg3: i32,
    ) -> bool;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_insert_time32_to_row(
        arg1: GrinGraph,
        arg2: GrinRow,
        arg3: i32,
    ) -> bool;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_insert_timestamp64_to_row(
        arg1: GrinGraph,
        arg2: GrinRow,
        arg3: i64,
    ) -> bool;

    #[cfg(all(feature = "grin_enable_row", feature = "grin_trait_const_value_ptr"))]
    #[allow(unused)]
    pub fn grin_get_value_from_row(
        arg1: GrinGraph,
        arg2: GrinRow,
        arg3: GrinDatatype,
        arg4: usize,
    ) -> *const ::std::os::raw::c_void;

    #[doc = " @brief Get row of values for the entire property list of a vertex.\n Later users can get property values from the row using APIs like\n ``grin_get_int32_from_row``.\n However this two-step value getting is not recommended if the user\n only wants to get the value of one property, in which case, the user\n should use APIs like ``grin_get_vertex_property_value_of_int32``.\n @param GrinGraph The graph\n @param GrinVertex The vertex"]
    #[cfg(all(feature = "grin_with_vertex_property", feature = "grin_enable_row"))]
    #[allow(unused)]
    pub fn grin_get_vertex_row(arg1: GrinGraph, arg2: GrinVertex) -> GrinRow;

    #[cfg(all(feature = "grin_with_edge_property", feature = "grin_enable_row"))]
    #[allow(unused)]
    pub fn grin_get_edge_row(arg1: GrinGraph, arg2: GrinEdge) -> GrinRow;

    #[doc = " @brief Get the vertex number of a given type in the graph.\n This API is only available for property graph.\n @param GrinGraph The graph.\n @param GrinVertexType The vertex type.\n @return The vertex number."]
    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_num_by_type(arg1: GrinGraph, arg2: GrinVertexType) -> usize;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_num_by_type(arg1: GrinGraph, arg2: GrinEdgeType) -> usize;

    #[doc = " @brief Get the vertex list of a given type.\n This API is only available for property graph.\n To get a vertex list chain of all types, using APIs in GRIN extension.\n @param GrinGraph The graph.\n @param GrinVertexType The vertex type.\n @return The vertex list of the given type."]
    #[cfg(all(feature = "grin_enable_vertex_list", feature = "grin_with_vertex_property"))]
    #[allow(unused)]
    pub fn grin_get_vertex_list_by_type(
        arg1: GrinGraph,
        arg2: GrinVertexType,
    ) -> GrinVertexList;

    #[cfg(all(feature = "grin_enable_edge_list", feature = "grin_with_edge_property"))]
    #[allow(unused)]
    pub fn grin_get_edge_list_by_type(arg1: GrinGraph, arg2: GrinEdgeType) -> GrinEdgeList;

    #[doc = " @brief Get the adjacent list of given direction, vertex and edge type.\n This API is only available for property graph.\n To get a adjacent list chain of all types, using APIs in GRIN extension.\n @param GrinGraph The graph.\n @param GrinDirection The direction of the adjacent list.\n @param GrinVertex The vertex.\n @return The adjacent list."]
    #[cfg(all(feature = "grin_enable_adjacent_list", feature = "grin_with_edge_property"))]
    #[allow(unused)]
    pub fn grin_get_adjacent_list_by_edge_type(
        arg1: GrinGraph,
        arg2: GrinDirection,
        arg3: GrinVertex,
        arg4: GrinEdgeType,
    ) -> GrinAdjacentList;

    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_equal_vertex_type(
        arg1: GrinGraph,
        arg2: GrinVertexType,
        arg3: GrinVertexType,
    ) -> bool;

    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_type(arg1: GrinGraph, arg2: GrinVertex) -> GrinVertexType;

    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_destroy_vertex_type(arg1: GrinGraph, arg2: GrinVertexType);

    #[doc = " @brief Get the vertex type list of the graph\n This API is only available for property graph.\n It lists all the vertex types in the graph.\n @param GrinGraph The graph.\n @return The vertex type list."]
    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_type_list(arg1: GrinGraph) -> GrinVertexTypeList;

    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_destroy_vertex_type_list(arg1: GrinGraph, arg2: GrinVertexTypeList);

    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_create_vertex_type_list(arg1: GrinGraph) -> GrinVertexTypeList;

    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_insert_vertex_type_to_list(
        arg1: GrinGraph,
        arg2: GrinVertexTypeList,
        arg3: GrinVertexType,
    ) -> bool;

    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_type_list_size(arg1: GrinGraph, arg2: GrinVertexTypeList) -> usize;

    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_type_from_list(
        arg1: GrinGraph,
        arg2: GrinVertexTypeList,
        arg3: usize,
    ) -> GrinVertexType;

    #[doc = " @brief Get the vertex type name.\n This API is enabled by ``GRIN_WITH_VERTEX_TYPE_NAME``,\n meaning that the graph has a unique name for each vertex type.\n @param GrinGraph The graph.\n @param GrinVertexType The vertex type.\n @return The vertex type name of string."]
    #[cfg(feature = "grin_with_vertex_type_name")]
    #[allow(unused)]
    pub fn grin_get_vertex_type_name(
        arg1: GrinGraph,
        arg2: GrinVertexType,
    ) -> *const ::std::os::raw::c_char;

    #[doc = " @brief Get the vertex type by name.\n This API is enabled by ``GRIN_WITH_VERTEX_TYPE_NAME``,\n meaning that the graph has a unique name for each vertex type.\n @param GrinGraph The graph.\n @param name The vertex type name.\n @return The vertex type."]
    #[cfg(feature = "grin_with_vertex_type_name")]
    #[allow(unused)]
    pub fn grin_get_vertex_type_by_name(
        arg1: GrinGraph,
        name: *const ::std::os::raw::c_char,
    ) -> GrinVertexType;

    #[doc = " @brief Get the vertex type id.\n This API is enabled by ``GRIN_TRAIT_NATURAL_ID_FOR_VERTEX_TYPE``,\n meaning that the graph has naturally increasing ids for vertex types.\n @param GrinGraph The graph.\n @param GrinVertexType The vertex type.\n @return The vertex type id."]
    #[cfg(feature = "grin_trait_natural_id_for_vertex_type")]
    #[allow(unused)]
    pub fn grin_get_vertex_type_id(arg1: GrinGraph, arg2: GrinVertexType)
        -> GrinVertexTypeId;

    #[doc = " @brief Get the vertex type by id.\n This API is enabled by ``GRIN_TRAIT_NATURAL_ID_FOR_VERTEX_TYPE``,\n meaning that the graph has naturally increasing ids for vertex types.\n @param GrinGraph The graph.\n @param GrinVertexTypeId The vertex type id.\n @return The vertex type."]
    #[cfg(feature = "grin_trait_natural_id_for_vertex_type")]
    #[allow(unused)]
    pub fn grin_get_vertex_type_by_id(
        arg1: GrinGraph,
        arg2: GrinVertexTypeId,
    ) -> GrinVertexType;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_equal_edge_type(
        arg1: GrinGraph,
        arg2: GrinEdgeType,
        arg3: GrinEdgeType,
    ) -> bool;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_type(arg1: GrinGraph, arg2: GrinEdge) -> GrinEdgeType;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_destroy_edge_type(arg1: GrinGraph, arg2: GrinEdgeType);

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_type_list(arg1: GrinGraph) -> GrinEdgeTypeList;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_destroy_edge_type_list(arg1: GrinGraph, arg2: GrinEdgeTypeList);

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_create_edge_type_list(arg1: GrinGraph) -> GrinEdgeTypeList;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_insert_edge_type_to_list(
        arg1: GrinGraph,
        arg2: GrinEdgeTypeList,
        arg3: GrinEdgeType,
    ) -> bool;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_type_list_size(arg1: GrinGraph, arg2: GrinEdgeTypeList) -> usize;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_type_from_list(
        arg1: GrinGraph,
        arg2: GrinEdgeTypeList,
        arg3: usize,
    ) -> GrinEdgeType;

    #[cfg(feature = "grin_with_edge_type_name")]
    #[allow(unused)]
    pub fn grin_get_edge_type_name(
        arg1: GrinGraph,
        arg2: GrinEdgeType,
    ) -> *const ::std::os::raw::c_char;

    #[cfg(feature = "grin_with_edge_type_name")]
    #[allow(unused)]
    pub fn grin_get_edge_type_by_name(
        arg1: GrinGraph,
        arg2: *const ::std::os::raw::c_char,
    ) -> GrinEdgeType;

    #[cfg(feature = "grin_trait_natural_id_for_edge_type")]
    #[allow(unused)]
    pub fn grin_get_edge_type_id(arg1: GrinGraph, arg2: GrinEdgeType) -> GrinEdgeTypeId;

    #[cfg(feature = "grin_trait_natural_id_for_edge_type")]
    #[allow(unused)]
    pub fn grin_get_edge_type_by_id(arg1: GrinGraph, arg2: GrinEdgeTypeId) -> GrinEdgeType;
